2010-01-15  Jaroslav Hajek  <highegg@gmail.com>

	* Array-b.cc: Inline ascending and descending sort.
	(do_bool_partition): New helper template function.
	(octave_sort<bool>::sort): Provide specializations.
	
2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::insert (const Array<T>&, const
	Array<octave_idx_type>&): Allow less dimensions than indices.

2010-01-14  Jaroslav Hajek  <highegg@gmail.com>

	* chNDArray.h: Declare relational bsxfun ops.
	* chNDArray.cc: Define them.

2010-01-14  John W. Eaton  <jwe@octave.org>

	* CMatrix.cc: Fix prototype for zherk.
	* fCMatrix.cc: Fix prototype for cherk.

2010-01-14  John W. Eaton  <jwe@octave.org>

	* oct-rl-edit.c (octave_rl_set_name): Save arg before setting
	rl_terminal_name.

2010-01-13  John W. Eaton  <jwe@octave.org>

	* idx-vector.cc (idx_vector::idx_scalar_rep::idx_scalar_rep (T x)):
	Initialize dummy variable.

2010-01-13  Jaroslav Hajek  <highegg@gmail.com>

	* Array.cc (Array<T>::compute_index): Generalize to the case of
	unequal lengths.

2010-01-13  Jaroslav Hajek  <highegg@gmail.com>

	* dim-vector.h (dim_vector::chop_trailing_singletons): Only uniquify
	if really needed.
	* Array.h (Array<T>::Array (T*, const dim_vector&)): Call
	chop_trailing_singletons.
	(Array<T>::Array (const Array<T>&, const dim_vector&,
	octave_idx_type...)): Ditto.
	(Array<T>::Array (const dim_vector&)): Ditto.
	(Array<T>::Array (const dim_vector&, const T&)): Ditto.
	(Array<T>::chop_trailing_singletons): Deprecate.
	* Array.cc (Array::Array(const Array&, const dim_vector&)): Ditto.
	(Array::index (const Array<idx_vector>&, ...)): Ditto.
	(Array<T>::permute): Don't call deprecate method here.
	(Array<T>::assign): Neither here.

2010-01-11  Rik <octave@nomad.inbox5.com>

	* Makefile.am: Remove unnecessary use of simple_move_if_change_rule to allow
	Make to update timestamps

2010-01-08  Jaroslav Hajek  <highegg@gmail.com>

	* Array.h (Array<T>::crefT): New helper typedef.