@@ -1,5 +1,11 @@
 2010-01-15  Jaroslav Hajek  <highegg@gmail.com>
 
+	* Array.cc (Array<T>::insert): Rewrite using assign.
+	(Array<T>::insert2, Array<T>::insertN): Remove.
+	* Array.h: Update declarations. Add brief documentation.
+
+2010-01-15  Jaroslav Hajek  <highegg@gmail.com>
+
 	* Array-b.cc: Inline ascending and descending sort.
 	(do_bool_partition): New helper template function.
 	(octave_sort<bool>::sort): Provide specializations.
